--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,35 @@
+*{
+    margin: 0;
+    padding: 0;
+    text-align: justify;
+}
 
 
+.osimodelimg{
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
+.osimodelimg>img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.overviewimg>img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.headerdiv>h1{
+    text-align: center;
+    font-weight: 900;
+}
 
+.headerdiv{
+    margin-top:10px;
+    margin-bottom:20px;
+}
 
 
 
@@ -55,10 +82,24 @@
 
 .dataimg>img{
     width: 400px;
-    height:100px;
+    height:200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.para4>img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.para1 > h3{
+    font-weight: 700;
+}
+
+.para1 > p{
+    font-size: 20px;
 }
 
 
