responsive design img 1

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -241,5 +241,8 @@ h2{
 /*Responsive CSS */
 
 @media only screen and (max-width:600px) {
-    
+    .presentationimg > img {
+        width: 250px;
+        height: 150px;
+    }
 }
