--- a/CSS/style.css
+++ b/CSS/style.css
@@ -245,4 +245,11 @@ h2{
         width: 250px;
         height: 150px;
     }
+
+    .osimodelimg>img {
+        width: 350px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
