responsive and animation changes

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,9 @@
     text-align: justify;
     font-family: 'Montserrat', sans-serif;;
 }
-
+::-webkit-scrollbar {
+    display: none;
+  }
 
 .osimodelimg{
     margin-top: 10px;
@@ -40,6 +42,7 @@
 
 .lanimg{
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .lanimg > img{
@@ -306,5 +309,62 @@ h2{
         display: block;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .para1 > p {
+        font-size: 14px;
+    }
+
+    .reasonone {
+        font-size: 14px;
+    }
+
+    .oldiv {
+        font-size: 14px;
+        padding-left: 5px;
+    }
+
+    .uldiv {
+        font-size: 14px;
+    }
+
+    .endpara {
+        font-size: 14px;
+    }
+
+    .headerdiv>h1 {
+        text-align: center;
+        font-weight: 900;
+        font-size: 25px;
+    }
+
+    .para1 > h2 {
+        font-weight: 700;
+        font-size: 20px;
+    }
+
+    .para2 > h2 {
+        font-weight: 700;
+        font-size: 20px;
+    }
+
+    .para3 > h1 {
+        font-size: 25px;
+    }
+
+    .hed {
+        font-size: 20px;
+        font-weight: bolder;
+    }
+
+    .para4 > h2 {
+        font-weight: 700;
+        text-decoration: underline;
+        font-size: 20px;
+    }
+
+    .lanimg {
+        width: 100%;
+        margin-bottom: 10px;
     }
 }
